Добавлены файлы 10 лаб

--- a/labs/lab03/report/Makefile
+++ b/labs/lab03/report/Makefile
@@ -1,8 +1,10 @@
-all:
-	-@quarto render
+# Основная цель
+all: reportlab3.pdf
 
+# Правило для сборки PDF
+reportlab3.pdf: reportlab3.qmd
+	pandoc "$<" -o "$@" --pdf-engine=xelatex
+
+# Очистка
 clean:
-	-rm -rf _output
-
-cleanall: clean
-	-rm -rf .quarto
+	rm -rf _output *.pdf
